Fixing docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
         solidserver:
                 image: nodesolidserver/node-solid-server
-                container-name: solidserver
+                container_name: solidserver
                 ports:
                 - "8443:8443"
         sampleweb:
-                buil: .
+                build: .
                 ports:
                 - "3000:3000"
